Reworked the aspect approach, based on feedback